# velox

scripts/: setup-adapters.sh
velox/: CMakeLists.txt
velox/buffer/: CMakeLists.txt
velox/codegen/: CMakeLists.txt
velox/common/: CMakeLists.txt
velox/common/base/: CMakeLists.txt
velox/common/caching/: CMakeLists.txt
velox/common/encode/: CMakeLists.txt
velox/common/file/: CMakeLists.txt
velox/common/hyperloglog/: CMakeLists.txt
velox/common/memory/: CMakeLists.txt
velox/common/process/: CMakeLists.txt
velox/common/serialization/: CMakeLists.txt
velox/common/testutil/: CMakeLists.txt
velox/common/time/: CMakeLists.txt
velox/connectors/: CMakeLists.txt
velox/connectors/hive/: CMakeLists.txt
velox/connectors/hive/storage_adapters/hdfs/: CMakeLists.txt
velox/connectors/hive/storage_adapters/s3fs/: CMakeLists.txt
velox/connectors/tpch/: CMakeLists.txt
velox/core/: CMakeLists.txt
velox/duckdb/conversion/: CMakeLists.txt
velox/duckdb/functions/: CMakeLists.txt
velox/duckdb/memory/: CMakeLists.txt
velox/dwio/common/: CMakeLists.txt
velox/dwio/common/compression/: CMakeLists.txt
velox/dwio/common/encryption/: CMakeLists.txt
velox/dwio/common/exception/: CMakeLists.txt
velox/dwio/common/tests/utils/: CMakeLists.txt
velox/dwio/dwrf/common/: CMakeLists.txt
velox/dwio/dwrf/proto/: CMakeLists.txt
velox/dwio/dwrf/reader/: CMakeLists.txt
velox/dwio/dwrf/utils/: CMakeLists.txt
velox/dwio/dwrf/writer/: CMakeLists.txt
velox/dwio/parquet/: CMakeLists.txt
velox/dwio/parquet/duckdb_reader/: CMakeLists.txt
velox/dwio/parquet/reader/: CMakeLists.txt
velox/dwio/parquet/thrift/: CMakeLists.txt
velox/dwio/parquet/writer/: CMakeLists.txt
velox/dwio/type/: CMakeLists.txt
velox/dwio/type/fbhive/: CMakeLists.txt
velox/exec/: CMakeLists.txt
velox/exec/tests/utils/: CMakeLists.txt
velox/expression/: CMakeLists.txt
velox/expression/type_calculation/: CMakeLists.txt
velox/flag_definitions/: CMakeLists.txt
velox/functions/: CMakeLists.txt
velox/functions/lib/: CMakeLists.txt
velox/functions/lib/string/: CMakeLists.txt
velox/functions/prestosql/: CMakeLists.txt
velox/functions/prestosql/aggregates/: CMakeLists.txt
velox/functions/prestosql/json/: CMakeLists.txt
velox/functions/prestosql/registration/: CMakeLists.txt
velox/functions/prestosql/types/: CMakeLists.txt
velox/functions/prestosql/window/: CMakeLists.txt
velox/parse/: CMakeLists.txt
velox/row/: CMakeLists.txt
velox/serializers/: CMakeLists.txt
velox/substrait/: CMakeLists.txt
velox/type/: CMakeLists.txt
velox/type/tz/: CMakeLists.txt
velox/vector/: CMakeLists.txt
velox/vector/arrow/: CMakeLists.txt
velox/vector/fuzzer/: CMakeLists.txt
velox/vector/tests/utils/: CMakeLists.txt
